partially solve problem if as solid defined element has overflow hidden

--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,10 @@ body {
    pointer-events:none;
 }
 
+.colliderWrapper {
+   position:absolute;
+}
+
 .collider {
    position:absolute;
 }
